--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
 -->
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!-->
 <html class="no-js" lang="en">
-<!--<![endif]-->
+
 
 <head>
   <meta charset="utf-8">
@@ -24,22 +20,8 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
   <!-- Title, icon, description and keywords -->
   <title>TEDxJMI</title>
   <link rel="shortcut icon" href="res/images/favicon.ico">
-  <meta name="description" content="TEDxJMI, x = independently organised TED event. Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta name="keywords" content="TEDx, JMI, Jamia Millia Islamia, New Delhi, event, talks">
-
-  <!-- Social media tags -->
-  <!-- Open Graph -->
-  <meta property="og:title" content="TEDxJMI">
-  <meta property="og:description" content="Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta property="og:image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
-  <meta property="og:url" content="https://tedxjmi.com">
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@TEDx_JMI">
-  <!-- Google+ -->
-  <meta itemprop="name" content="TEDxJMI">
-  <meta itemprop="description" content="Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta itemprop="image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
+  <meta name="description" content="TEDxKIMUN, x = independently organised TED event. Igniting Minds.">
+  <meta name="keywords" content="TEDx, KIMUN">
 
   <!-- Browser themes -->
   <meta name="theme-color" content="#000">
@@ -81,8 +63,8 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
           </button>
 
           <a class="navbar-brand font-family-alt letter-spacing-1 text-extra-large text-uppercase" href="/">
-            <img class="logo-navbar-dark" src="res/images/logos/dark.png" alt="TEDxJMI"/>
-            <img class="logo-navbar-white" src="res/images/logos/light.png" alt="TEDxJMI"/>
+            <img class="logo-navbar-dark" src="res/images/logos/dark.png" alt="TEDxKIMUN"/>
+            <img class="logo-navbar-white" src="res/images/logos/light.png" alt="TEDxKIMUN"/>
           </a>
         </div>
         <!-- //.navbar-header -->
