--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-<!--
- _____ _____ ____          _ __  __ ___
-|_   _| ____|  _ \__  __  | |  \/  |_ _|
-  | | |  _| | | | \ \/ /  | | |\/| || |
-  | | | |___| |_| |>  < |_| | |  | || |
-  |_| |_____|____//_/\_\___/|_|  |_|___|
-
-Event website by Syed Faheel Ahmad (github.com/faheel)
--->
 
 <!DOCTYPE html>
 <html class="no-js" lang="en">
@@ -63,8 +54,8 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
           </button>
 
           <a class="navbar-brand font-family-alt letter-spacing-1 text-extra-large text-uppercase" href="/">
-            <img class="logo-navbar-dark" src="res/images/logos/dark.png" alt="TEDxKIMUN"/>
-            <img class="logo-navbar-white" src="res/images/logos/light.png" alt="TEDxKIMUN"/>
+            <img class="logo-navbar-dark" src="res/images/logos/white-removebg-preview.png" alt="TEDxKIMUN"/>
+            <img class="logo-navbar-white" src="res/images/logos/black-removebg-preview.png" alt="TEDxKIMUN"/>
           </a>
         </div>
         <!-- //.navbar-header -->
