--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <body id="page-top">
   <!-- Navigation Start -->
-  <nav id="navigation" class="navbar navbar-fixed-top">
+  <!--<nav id="navigation" class="navbar navbar-fixed-top">
     <div class="container">
       <div class="row">
         <div class="navbar-header col-lg-3">
@@ -80,7 +80,7 @@
       <!-- //.row -->
     </div>
     <!-- //.container -->
-  </nav>
+  </nav>-->
   <!-- //Navigation End -->
 
 
@@ -101,13 +101,11 @@
                     </h2>
                     <br>
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3">
-                      October 16, 2017
                     </h3>
                     <p class="font-family-alt text-white sm-title-small title-medium">
-                      at
+                      
                     </p>
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
-                      Jamia Millia Islamia
                     </h4>
                     <!-- <br>
                     <a href="/register/" class="btn btn-base-color sm-btn-medium btn-large">
